AWS/SECURITY-GROUP/securitygrup.tf
resource "aws_security_group" "firewall_db_acesso" {
  name   = "security-group"
  vpc_id = "vpc-0b5c646cbfbec4deb"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  ### ACESSO MYSQL INTERNO
  egress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ###SSH#

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"
    // This means, all ip address are allowed to ssh ! 
    // Do not do it in the production. 
    // Put your office or home address in it!
    cidr_blocks = ["0.0.0.0/0"]
  }
  //If you do not add this rule, you can not reach the NGIX  
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ## ACESSO MYSQL EXTERNO
  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  tags = {
    Name        = "SECURITY_GROUP_DB_FIREWALL"
    Environment = "Bootcamp-Campinho"
    INFRA       = "LIBERAÇAO DE PORTA BANCO-DE-DADOS"
    Managed     = "BTCAMP"
  }
}
